--- a/learn-certs-pr/courses/mb-230t01.yml
+++ b/learn-certs-pr/courses/mb-230t01.yml
@@ -1,11 +1,11 @@
 ### YamlMime:Course
-title: Dynamics 365 for customer engagement for customer service
+title:  Microsoft Dynamics 365 Customer Service
 metadata:
-  title: 'Course MB-230T01-A: Dynamics 365 for customer engagement for customer service'
-  description: 'Course MB-230T01-A: Dynamics 365 for customer engagement for customer service'
+  title: 'Course MB-230T01-A: Microsoft Dynamics 365 Customer Service'
+  description: 'Course MB-230T01-A: Microsoft Dynamics 365 Customer Service'
 uid: course.mb-230t01
 courseNumber: 'MB-230T01-A'
-hoursToComplete: 24
+hoursToComplete: 72
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
 - skill: Установка и настройка приложений обслуживания клиентов
@@ -15,6 +15,10 @@ skillsGained:
 - skill: Автоматизация обработки записей управления кейсами
 - skill: Создание и использование статей базы  знаний
 - skill: Создание и использование разрешений и соглашений об уровне обслуживания
+- skill: Работа с многоканальным взаимодействием.
+- skill: Работа с Connected Customer Service.
+- skill: Работа с расписанием обслуживания клиентов.
+- skill: Работа с Customer Service Insights.
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -28,24 +32,23 @@ products:
 exams:
 - uid: exam.mb-230
 summary: |-
-  Microsoft Dynamics 365 для обслуживания клиентов предлагает любой организации возможность  достижения успеха в работе с клиентами. Использование таких инструментов, как автоматическое создание кейсов и управление очередями, высвобождает время для того, чтобы уделять больше внимания непосредственно клиентам.
+  Microsoft Dynamics 365 Customer Service предлагает любой организации возможность успешного взаимодействия с клиентами. Использование таких инструментов, как автоматическое создание обращений и управление очередью, освобождает вам время, которое вы можете использовать для действий, которые окажут большее влияние — для непосредственного общения с клиентами.
 
-  Наша команда всемирно признанных экспертов проводит студентов шаг за шагом, от создания кейсов, до взаимодействия с клиентами и решения этих кейсов. Как только эти кейсы будут решены, учащиеся изучат ключевые детали на основе анализа данных, чтобы быстрее решить подобные кейсы или вообще избежать новых проблем.
+  Присоединяйтесь к нашей команде всемирно признанных экспертов, которые пошагово проведут вас от создания обращений к взаимодействию с клиентами и разрешению обращений.  После разрешения обращений клиентов благодаря анализу данных вы можете получать ключевые сведения, которые помогут вам разрешать подобные обращения быстрее или и вовсе избегать новых подобных случаев.
 
   #### Профиль аудитории
-  Функциональный консультант по взаимодействию с клиентами Dynamics 365 отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
+  Dynamics 365 Customer Engagement Functional Consultant отвечает за выявление и сбор требований, привлечение профильных специалистов и заинтересованных лиц, интерпретацию требований и настройку решения и приложений. Консультант по функциональным возможностям реализовывает решение с использованием стандартных возможностей, расширяемости без программирования, интеграций приложений и служб.
 prerequisitesSection: |-
-  Этот курс предназначен для лиц, которые претендуют на роль администратора Microsoft 365 Enterprise и прошли один из путей сертификации администратора рабочей нагрузки Microsoft 365.
+  Этот курс разработан для консультантов по функциональным возможностям, работающих с Dynamics 365 Customer Service, и консультантов по функциональным возможностям, которые работают с другими приложениями Dynamics 365 и хотят расширить свои знания, познакомившись с Customer Service.
 outlineSection: |-
   ### Модуль 1&#58; Обзор обслуживания клиентов
-  В этом модуле студенты изучат основы обслуживания клиентов в Dynamics 365.  Студенты установят и настроят приложение, а также узнают о ролях безопасности, связанных приложениях и аналитике.
+  В этом модуле вы познакомитесь с основами обслуживания клиентов в Dynamics 365. Мы установим и настроим приложение и познакомимся с ролями безопасности, связанными приложениями и аналитикой.
   #### Уроки
   - Урок 1&#58; Создание записей кейсов
   - Урок 2&#58; Связанные сервисные приложения
   - Урок 3&#58; Аналитика для сервиса
   - Урок 4&#58; ИИ для сервиса
   - Урок 5&#58; Настройка обслуживания клиентов
-  - Урок 6&#58; Краткое содержание модуля
   
   После завершения этого модуля студенты получат следующее&#58;
   - Установить и настроить приложение обслуживания клиентов
@@ -53,42 +56,82 @@ outlineSection: |-
 
 
   ### Модуль 2&#58; Управление кейсами
-  В этом модуле студенты узнают, как открывать и разрешать случаи (кейсы) обслуживания клиентов, как вручную, так и с помощью автоматизации.
+  В этом модуле вы узнаете, как открывать и разрешать обращения обслуживания клиентов как вручную, так и автоматически.
   #### Уроки
   - Урок 1&#58; Обзор управления делами
   - Урок 2&#58; Создание записей кейсов
   - Урок 3&#58; Управление очередью
   - Урок 4&#58; Маршрутизация кейсов
   - Урок 5&#58; Разрешение кейсов
-  - Урок 6&#58; Краткое содержание модуля
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После прохождения этого модуля вы сможете&#58;
   - Открывать и разрешать кейсы  обслуживания клиентов
   - Автоматизировать создание кейсов и маршрутизацию
 
 
   ### Модуль 3&#58; Соглашения об уровне обслуживания и права
-  В этом модуле студенты узнают, как определять и использовать права и шаблоны прав, а также соглашения об уровне обслуживания (SLA) и как эти инструменты обеспечивают разрешение кейсов.
+  В этом модуле вы узнаете, как определять и использовать объемы обслуживания, шаблоны объемов обслуживания и соглашения об условиях обслуживания и как эти инструменты обеспечивают разрешение обращений.
   #### Уроки
   - Урок 1&#58; Обзор прав и SLA
   - Урок 2&#58; Создание и управление правами
   - Урок 3&#58; Создание и управление SLA
-  - Урок 4&#58; Краткое содержание модуля
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После прохождения этого модуля вы сможете&#58;
   - Создавать и использовать соглашения об уровне обслуживания
   - Создавать и использовать права
 
 
   ### Модуль 4&#58; Управление знаниями
-  В этом модуле студенты узнают, как создавать и использовать управление знаниями.  Кроме того, студенты будут изучать жизненный цикл статей базы знаний.
+  В этом модуле вы узнаете, как создавать и использовать управление знаниями. Кроме того, вы узнаете о жизненном цикле статей базы знаний.
   #### Уроки
   - Урок 1&#58; Обзор управления знаниями
   - Урок 2&#58; Авторство и организация
   - Урок 3&#58; Использование контента базы знаний
   - Урок 4&#58; Управление контентом базы знаний
-  - Урок 5&#58; Краткое содержание модуля
 
-  После завершения этого модуля студенты получат следующее&#58;
+  После прохождения этого модуля вы сможете&#58;
   - Создавать контент базы знаний и управлять им 
+
+
+  ### Модуль 5&#58; многоканальное взаимодействие
+  В этом модуле вы узнаете, как работать с многоканальным взаимодействием для Dynamics 365 Customer Service.
+  #### Уроки
+  - Урок 1&#58; начало работы.
+  - Урок 2&#58; маршрутизация записей сущностей.
+  - Урок 3&#58; маршрутизация и распределение работы.
+  - Урок 4&#58; настройка каналов сообщений.
+  - Урок 5&#58; развертывание мини-приложений чата.
+  - Урок 6&#58; создание решений умной помощи.
+  - Урок 7&#58; интеграция бота Power Virtual Agents.
+  - Урок 8&#58; инструменты для эффективной работы.
+
+
+  ### Модуль 6&#58; расписание обслуживания клиентов
+  В этом модуле вы узнаете, как использовать функцию Customer Service Scheduling в Dynamics 365 Customer Service.
+  #### Уроки
+  - Урок 1&#58; начало работы с расписанием обслуживания клиентов.
+  - Урок 2&#58; настройка расписания обслуживания клиентов.
+  - Урок 3&#58; определение резервируемых ресурсов и работа с ними.
+  - Урок 4&#58; работа со службами.
+  - Урок 5&#58; работа с предпочтениями выполнения.
+  - Урок 6&#58; планирование действий сервиса.
+  - Урок 7&#58; перепланировка действий сервиса и замена ресурсов.
+
+
+  ### Модуль 7&#58; Connected Customer Service
+  В этом модуле вы узнаете, как использовать Dynamics 365 Connected Customer Service для получения данных и осуществления на основании данных обоснованных бизнес-действий.
+  #### Уроки
+  - Урок 1&#58; начало работы с Connected Customer Service.
+  - Урок 2&#58; регистрация устройств.
+  - Урок 3&#58; управление устройствами и взаимодействие устройств.
+  - Урок 4&#58; оповещения IoT и отправка команд.
+
+
+  ### Модуль 8&#58; Customer Service Insights
+  В этом модуле вы узнаете, как работать с Customer Service Insights для использования искусственного интеллекта (AI) в вашем решении Dynamics 365 Customer Service.
+  #### Уроки
+  - Урок 1&#58; начало работы с Customer Service Insights.
+  - Урок 2&#58; работа с анализом звонков Customer Service.
+
+
 
