--- a/learn-certs-pr/courses/pl-200t00.yml
+++ b/learn-certs-pr/courses/pl-200t00.yml
@@ -25,17 +25,17 @@ products:
 exams:
 - uid: exam.pl-200
 summary: |-
-  Платформа Power позволяет организациям автоматизировать бизнес-процессы, разрабатывать собственные приложения, быстрее и эффективнее связываться с клиентами. Из этого курса учащиеся узнают, как выявлять и собирать требования, привлекать профильных специалистов и заинтересованных лиц, интерпретировать требования и настраивать решения и приложения на платформе Power. Помимо изучения теории, учащихся ждут практические занятия, на которых они будут улучшать приложения, создавать собственные способы взаимодействия с пользователями, осуществлять интеграцию систем, преобразование данных, автоматизацию пользовательских процессов и пользовательские визуализации. Платформа Power состоит из четырех основных продуктов: Power Apps, Power Automate, Power BI и Power Virtual Agents. В этом курсе мы детально рассмотрим эти четыре приложения, а также уделим внимание Common Data Service, AI Builder, соединителям и порталам.
+  Платформа Power позволяет организациям автоматизировать бизнес-процессы, разрабатывать собственные приложения, быстрее и эффективнее связываться с клиентами. Из этого курса учащиеся узнают, как выявлять и собирать требования, привлекать профильных специалистов и заинтересованных лиц, интерпретировать требования и настраивать решения и приложения на платформе Power. Помимо изучения теории, учащихся ждут практические занятия, на которых они будут улучшать приложения, создавать собственные способы взаимодействия с пользователями, осуществлять интеграцию систем, преобразование данных, автоматизацию пользовательских процессов и пользовательские визуализации. В этом курсе мы детально рассмотрим эти четыре приложения, а также уделим внимание Microsoft Dataverse (ранее Common Data Service), AI Builder, соединителям и порталам.
 
   #### Профиль аудитории
   Консультант по функциональным возможностям платформы Power отвечает за выявление и сбор требований, привлечение профильных специалистов и заинтересованных лиц, интерпретацию требований и настройку решений и приложений на платформе Power. Консультант по функциональным возможностям реализует компоненты решения, которые включают улучшение приложения, создание пользовательских способов взаимодействия с пользователями, интеграцию систем, преобразование данных, автоматизацию пользовательских процессов и пользовательские визуализации.
 prerequisitesSection: |-
   - Опыт работы ИТ-специалистом или обучение по ИТ-специальности.
   - Рабочие знания платформы Power и ее основных компонентов.
-  - Знание Common Data Service и концепций безопасности.
+  - Знание Microsoft Dataverse (или общего моделирования данных) и понятий безопасности.
 outlineSection: |-
   ### Модуль 1&#58; знакомство с платформой Power
-  Этот модуль даст учащемуся знания о платформе Power и ее основных 4 компонентах:&#58; Power Apps, Power Automate, Power BI и Power Virtual Agents.
+  Этот модуль даст учащемуся знания о платформе Power и ее основных 4 компонентах&#58; Power Apps, Power Automate, Power BI и Power Virtual Agents.
   #### Уроки
   - Обзор платформы Power.
   
@@ -44,34 +44,50 @@ outlineSection: |-
   После прохождения этого модуля учащиеся смогут&#58;
   - Определять основные компоненты платформы Power.
   - Описывать роль консультанта по функциональным возможностям.
-  
-  
-  ### Модуль 2&#58; работа с Common Data Service
-  Из этого модуля учащиеся узнают о создании модели данных в Common Data Service, включая импорт данных, использование параметров табличных отчетов и настройку безопасности. Учащиеся также узнают, как с легкостью создавать ИИ с помощью построителя ИИ.
+
+
+  ### Модуль 2&#58; роль консультанта по функциональным возможностям
+  Из этого модуля учащиеся узнают больше о роли консультанта по функциональным возможностям и навыках, требуемых для успешной реализации решения Power Platform для организации.
+
+  - Обзор навыков консультанта.
+  - Создание и проверка документации.
+  - Привлечение заинтересованных лиц.
+  - Реализация контроля качества.
+  - Настройка интеграций.
+
+  После прохождения этого модуля учащиеся смогут&#58;
+  - Привлекать заинтересованных лиц с помощью демонстраций.
+  - Создавать схемы отношений между таблицами (сущностями).
+  - Разрабатывать интеграции.
+  - Взаимодействовать с командами консультантов и организаций-клиентов.
+
+   
+  ### Модуль 3&#58; работа с Dataverse
+  Из этого модуля учащиеся узнают о создании модели данных в Microsoft Dataverse, включая импорт данных, использование параметров табличных отчетов и настройку безопасности. Учащиеся также узнают, как с легкостью создавать AI с помощью AI Builder.
   #### Уроки
   - Работа с моделью данных.
   - Создание процессов и управление ими.
   - Работа с построителем ИИ.
-  - Настройка параметров Common Data Service.
+  - Настройка параметров Dataverse.
   - Импорт и экспорт данных.
   - Использование параметров табличных отчетов.
   - Настройка параметров безопасности.
   
   #### Лабораторная&#58; создание приложения
   
-  #### Лабораторная&#58; создание сущностей и полей
+  #### Лабораторная &#58; создание таблиц и столбцов
   
   #### Лабораторная&#58; создание взаимосвязей
   
-  #### Лабораторная&#58; дополнительные параметры сущностей
+  #### Лабораторная &#58; дополнительные параметры таблицы
   
   После прохождения этого модуля учащиеся смогут&#58;
-  - Создать модель данных.
-  - Настроить параметры Common Data Service.
-  - Настроить параметры безопасности.
+  - Понимать таблицы, столбцы, строки и отношения.
+  - Настраивать модель данных в Dataverse.
+  - Работать в среде в рамках центра администрирования Power Platform.
+
   
-  
-  ### Модуль 3&#58; создание приложений Power Apps
+  ### Модуль 4&#58; создание приложений Power Apps
   Из этого модуля учащиеся узнают о ценности для бизнеса трех типов приложений Power Apps. Учащиеся также узнают, как настраивать и разрабатывать такие приложения и ознакомятся с рекомендациями по взаимодействию с пользователями для каждого типа приложений.
   #### Уроки
   - Создание приложений на основе моделей.
@@ -93,12 +109,12 @@ outlineSection: |-
   #### Лабораторная&#58; взаимодействие с пользователем
   
   После прохождения этого модуля учащиеся смогут&#58;
-  - Разработать и создать приложение Power Apps.
-  - Подключить приложение Power Apps к данным.
-  - Разработать навигацию по приложению.
+  - Подключаться к данным в Power Apps.
+  - Создать Power App.
+  - Разрабатывать пользовательский интерфейс приложения.
   
   
-  ### Модуль 4&#58; создание потоков Power Automate
+  ### Модуль 5&#58; создание потоков Power Automate
   Из этого модуля учащиеся узнают, как автоматизировать бизнес-процессы с использованием потоков Power Automate, потоков бизнес-процессов и потоков пользовательского интерфейса.
   #### Уроки
   - Создание потоков.
@@ -122,12 +138,12 @@ outlineSection: |-
   #### Лабораторная&#58; добавление ветвей к потоку бизнес-процесса
   
   После прохождения этого модуля учащиеся смогут&#58;
-  - Автоматизировать бизнес-процессы с использованием потоков.
-  - Подключаться к данным в Power Automate.
-  - Создавать потоки бизнес-процессов с логикой ветвления.
+  - Создавать потоки.
+  - Создавать последовательности операций бизнес-процесса.
+  - Понимать потоки UI.
   
   
-  ### Модуль 5&#58; работа с Power Virtual Agents
+  ### Модуль 6&#58; работа с Power Virtual Agents
   Из этого модуля учащиеся узнают, как автоматизировать взаимодействия с клиентами с помощью чат-бота с использованием Power Virtual Agents.
   #### Уроки
   - Создание чат-бота.
@@ -139,13 +155,12 @@ outlineSection: |-
   #### Лабораторная&#58; создание чат-бота
   
   После прохождения этого модуля учащиеся смогут&#58;
-  - Настроить темы, сущности и переменные.
   - Создать чат-бота.
-  - Осуществить интеграцию с многоканальным взаимодействием для Customer Service.
-  - Работать в интерфейсе PVA.
+  - Включать поток в чат-бота.
+  - Создавать темы и сущности.
   
   
-  ### Модуль 6&#58; анализ данных с использованием Power BI
+  ### Модуль 7&#58; анализ данных с использованием Power BI
   Из этого модуля учащиеся узнают, как работать с Power BI Desktop и службой Power BI для анализа данных и создания визуализаций.
   #### Уроки
   - Начало работы с Power BI.
@@ -170,19 +185,3 @@ outlineSection: |-
   - Создавать визуализации.
   - Использовать данные в Power BI.
   - Экспортировать визуализации данных для заинтересованных лиц.
-  
-  
-  ### Модуль 7&#58; навыки консультанта
-  Из этого модуля учащиеся узнают больше о роли консультанта по функциональным возможностям и навыках, требуемых для успешной реализации решений платформы Power для организации.
-  #### Уроки
-  - Обзор навыков консультанта.
-  - Создание и проверка документации.
-  - Привлечение заинтересованных лиц.
-  - Реализация контроля качества.
-  - Настройка интеграций.
-  
-  После прохождения этого модуля учащиеся смогут&#58;
-  - Определять соответствующую документацию.
-  - Составлять бизнес-требования.
-  - Привлекать заинтересованных лиц с помощью демонстраций.
-  - Участвовать в ALM и тестировании.
