--- a/learn-certs-pr/courses/pl-400t00.yml
+++ b/learn-certs-pr/courses/pl-400t00.yml
@@ -37,43 +37,96 @@ prerequisitesSection: |-
 outlineSection: |-
   ### Модуль 1&#58; создание приложения на основе модели в Power Apps
   Из этого модуля вы узнаете, как создать приложение на основе модели в Power Apps с использованием Common Data Service.
+  #### Уроки
+  - Знакомство с приложениями на основе моделей и Common Data Service.
+  - Начало работы с приложениями на основе моделей в Power Apps.
+  - Создание сущностей в Common Data Service и управление ими.
+  - Создание полей в рамках сущности в Common Data Service и управление ими.
+  - Работа с наборами параметров в Common Data Service.
+  - Создание отношений между сущностями в Common Data Service.
+  - Определение и создание бизнес-правил в Common Data Service.
+  - Создание и определение полей вычислений или сведений в Common Data Service.
+  - Начало работы с ролями безопасности в Common Data Service.
   
   
-  ### Модуль 2&#58; начало работы с Common Data Service
-  В этом модуле объясняются концепции и преимущества Common Data Service. Также обсуждается создание среды, сущностей, полей и наборов параметров.
-  
-  
-  ### Модуль 3&#58; создание приложения на основе холста в Power Apps
+  ### Модуль 2&#58; создание приложения на основе canvas в Power Apps
   Этот модуль познакомит вас с Power Apps, поможет создать и настроить приложение, расскажет, как управлять приложением и распространять его. Вы также узнаете, как создавать наилучшую навигацию по приложению, создавать лучший пользовательский интерфейс с использованием тем, значков, изображений, персонализации, различных форм-факторов и элементов управления.
+  #### Уроки
+  - Начало работы с Power Apps.
+  - Настройка приложения на основе canvas в Power Apps.
+  - Управление приложениями в Power Apps.
+  - Навигация в приложении на основе canvas в Power Apps.
+  - Как создавать ИП в приложении на основе canvas в Power Apps.
+  - Использование и понимание средств контроля в приложении на основе canvas в Power Apps.
+  - Документирование и тестирование вашего приложения Power Apps.
+
+  
+  ### Модуль 3&#58; освоение дополнительных техник и параметров данных в приложениях на основе canvas
+  Этот модуль поможет вам с использованием дополнительных формул, выполнением пользовательских обновлений, проверками производительности и тестированием. Он также поможет вам улучшить пользовательский опыт, использовать настраиваемые соединители и познакомит вас с работой с ограничениями источника данных.
+  #### Уроки
+  - Использование техник императивной разработки для приложений на основе canvas в Power Apps.
+  - Создание расширенной формулы с использованием таблиц, записей и коллекций в приложении на основе canvas в Power Apps.
+  - Выполнение пользовательского обновления в приложении Power Apps на основе canvas.
+  - Проведение тестирования и проверок производительности в приложении Power Apps на основе canvas.
+  - Работа с реляционными данными в приложении Power Apps на основе canvas.
+  - Работа с ограничениями источника данных (ограничениями делегирования) в приложении Power Apps на основе canvas.
+  - Подключение к другим данным в приложении Power Apps на основе canvas.
+  - Использование настраиваемых соединителей в приложении Power Apps на основе canvas.
   
   
   ### Модуль 4&#58; автоматизация бизнес-процесса с использованием Power Automate
   В этом модуле вы познакомитесь с Power Automate, узнаете, как создавать рабочие процессы и управлять потоками.
+  #### Уроки
+  - Начало работы с Power Automate.
+  - Создание более сложных потоков с Power Automate.
+  - Знакомство с последовательностями операций бизнес-процесса в Power Automate.
+  - Создание иммерсивного потока бизнес-процесса в Power Automate.
+  - Понимание понятий дополнительных потоков бизнес-процесса в Power Automate.
+  - Знакомство с выражениями в Power Automate.
   
   
-  ### Модуль 5&#58; создание потока бизнес-процесса в Power Automate
-  Из этого модуля вы узнаете, как создавать потоки бизнес-процессов в Power Automate.
+  ### Модуль 5&#58; знакомство с разработкой с использованием Power Platform
+  Этот модуль — первый шаг в изучении платформы, инструментов и экосистемы Power Platform.
+  #### Уроки
+  - Знакомство с ресурсами для разработчиков Power Platform.
+  - Использование средств разработчика для расширения Power Platform.
+  - Знакомство с расширением Microsoft Power Platform.
+
   
-  
-  ### Модуль 6&#58; знакомство с разработкой с использованием платформы Power
-  Этот модуль — первый шаг в изучении платформы, инструментов и экосистемы платформы Power.
-  
-  
+  ### Модуль 6&#58; расширение Power Platform Common Data Service
+  В этом модуле рассматриваются инструменты и ресурсы, необходимые для расширения Power Platform. Мы рассмотрим пакеты SDK, модель расширяемости и инфраструктуру обработки событий. В этом модуле также рассматривается, когда использовать подключаемые модули, настройка подключаемых модулей, регистрация и развертывание подключаемых модулей.
+  #### Уроки
+  - Знакомство с Common Data Service для разработчиков.
+  - Расширение подключаемых модулей.
+
+
   ### Модуль 7&#58; расширение приложений на основе моделей для взаимодействия с пользователем с использованием платформы Power
   В этом модуле описывается, как создавать клиентские сценарии, реализовывать типовые действия с использованием клиентских сценариев и автоматизировать потоки бизнес-процессов с использованием клиентских сценариев. Узнайте больше о том, что могут делать клиентские сценарии, о правилах и настройке сценариев. Узнайте, когда использовать и когда не использовать клиентский сценарий.
-  
-  
+  #### Уроки
+  - Знакомство с веб-ресурсами.
+  - Реализация типовых действий с помощью клиентского скрипта.
+  - Автоматизация потоков бизнес-процессов с помощью клиентских скриптов.
+
+
   ### Модуль 8&#58; создание компонентов с помощью платформы компонентов Power Apps
   В этом модуле описывается, как начать работать с платформой компонентов Power Apps. Сначала описываются основные понятия и компоненты. Затем рассказывается, как создавать компоненты и работать с дополнительными функциями платформы компонентов Power Apps.
+  #### Уроки
+  - Начало работы с платформой компонентов Power Apps.
+  - Создание компонента Power Apps.
+  - Использование дополнительных функций с помощью платформы компонентов Power Apps.
+
   
-  
-  ### Модуль 9&#58; расширение Common Data Service платформы Power
-  В этом модуле рассматриваются инструменты и ресурсы, необходимые для расширения платформы Power. Мы рассмотрим пакеты SDK, модель расширяемости и инфраструктуру обработки событий. В этом модуле также рассматривается, когда использовать подключаемые модули, настройка подключаемых модулей, регистрация и развертывание подключаемых модулей.
+  ### Модуль 9&#58; расширение порталов Power Apps 
+  В этом модуле описывается, как трансформировать контентный портал в полнофункциональное веб-приложение, взаимодействующее с Common Data Service. Мы также рассмотрим возможности, доступные для настройщиков и разработчиков, для расширения функциональности портала и интеграции с Office 365, Power Platform и компонентами Azure.
+  #### Уроки
+  - Знакомство с порталами Power Apps.
+  - Доступ к Common Data Service на порталах Power Apps.
+  - Расширение порталов Power Apps.
+  - Создание пользовательских веб-шаблонов порталов Power Apps.
   
   
   ### Модуль 10&#58; интеграция с платформой Power и Common Data Service
   В этом модуле рассказывается об API Common Data Service с целью описания того, как осуществлять интеграцию с Common Data Service с использованием кода. Ознакомьтесь с углубленным описанием возможностей, доступных в Common Data Service, для интеграции данных и событий в Azure.
-  
-  
-  ### Модуль 11&#58; расширение порталов Power Apps
-  В этом модуле описывается, как трансформировать контентный портал в полнофункциональное веб-приложение, взаимодействующее с Common Data Service. Мы также рассмотрим возможности, доступные для настройщиков и разработчиков, для расширения функциональности портала и интеграции с Office 365, платформой Power и компонентами Azure.
+  #### Уроки
+  - Работа с Common Data Service Web API.
+  - Интеграция решений Common Data Service Azure.
