--- a/learn-certs-pr/exams/da-100.yml
+++ b/learn-certs-pr/exams/da-100.yml
@@ -8,7 +8,7 @@ displayName: DA-100
 summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
-  <div><strong>Содержание этого экзамена было обновлено 24 сентябрь 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
+  <div><strong>Содержание этого экзамена будет обновлено 27 января 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong><br/><br/></div>
   </div>
 
   Data Analysts помогают компаниям максимизировать стоимость своих активов данных с помощью Microsoft Power BI. Являясь экспертом в данной области, Data Analyst отвечает за проектирование и построение масштабируемых моделей данных, очистку и преобразование данных, а также за предоставление расширенных аналитических возможностей, которые обеспечивают значимую ценность для бизнеса с помощью простой для понимания визуализации данных. Data Analyst также сотрудничает с ключевыми заинтересованными сторонами в отраслевой вертикали для предоставления соответствующей информации на основе определенных бизнес-требований.
@@ -32,7 +32,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена было обновлено 24 сентябрь 2020 года. Пожалуйста, загрузите схему навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что изменилось.
+- Содержание этого экзамена будет обновлено 27 января 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
 - Подготовка данных (20-25%)
 - Смоделируйте данные (25-30%)
 - Визуализация данных (20-25%)
