--- a/learn-certs-pr/exams/dp-900.yml
+++ b/learn-certs-pr/exams/dp-900.yml
@@ -8,7 +8,7 @@ displayName: DP-900
 summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
-  <div><strong>Содержание этого экзамена было обновлено 22 октября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
+  <div><strong>Содержание этого экзамена будет обновлено 27 января 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong><br/><br/></div>
   </div>
 
   Кандидаты на этот экзамен должны иметь базовые знания основных понятий данных и того, как они реализуются с использованием служб данных Microsoft Azure.
@@ -40,7 +40,7 @@ locales:
 levels:
 - beginner
 skills:
-- Содержание этого экзамена было обновлено 22 октября 2020 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
+- Содержание этого экзамена будет обновлено 27 января 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
 - описывать основные концепции данных (15-20%)
 - Описание того, как работать с реляционными данными в Azure (25-30%)
 - Описание того, как работать с нереляционными данными в Azure (25-30%)
