--- a/learn-certs-pr/power-apps-and-d365-solution-architect-expert.yml
+++ b/learn-certs-pr/power-apps-and-d365-solution-architect-expert.yml
@@ -10,9 +10,9 @@ summary: |-
   
   Архитекторы решений для Microsoft Dynamics 365 + Power Platform ведут успешные внедрения и фокусируются на том, как решения удовлетворяют более широкие деловые и технические потребности организаций.
 
-  <div>ПРИМЕЧАНИЕ: получение следующих двух сертификаций считается необходимым условием для этой сертификации. Это необходимое условие не указано ниже из-за отсутствия достаточного количества места.<ul>
-  <li><a href="/learn/certifications/power-platform-functional-consultant-associate">Microsoft Certified: Power Platform Functional Consultant Associate</a></li>
-  <li><a href="/learn/certifications/power-platform-developer-associate">Microsoft Certified: Power Platform Developer Associate</a></li>
+  <div><br/><strong>ПРИМЕЧАНИЕ&#58; получение следующих двух сертификаций считается необходимым условием для этой сертификации. Это необходимое условие не указано ниже из-за отсутствия достаточного количества места.</strong><ul>
+  <li><a href="/learn/certifications/power-platform-functional-consultant-associate">Microsoft Certified&#58; Power Platform Functional Consultant Associate</a></li>
+  <li><a href="/learn/certifications/power-platform-developer-associate">Microsoft Certified&#58; Power Platform Developer Associate</a></li>
   </ul></div>
 subTitle: Архитекторы решений для Microsoft Dynamics 365 + Power Platform ведут успешные внедрения и фокусируются на том, как решения удовлетворяют более широкие деловые и технические потребности организаций.
 levels:
