--- a/learn-certs-pr/power-platform-fundamentals.yml
+++ b/learn-certs-pr/power-platform-fundamentals.yml
@@ -8,7 +8,19 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badg
 summary: |-
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
 
-  Докажите, что вы понимаете основные возможности Power Platform - от коммерческой ценности и возможностей основного продукта до создания простого приложения Power Apps для холста, подключения источников данных, автоматизации основных бизнес-процессов с помощью Power Automate, создания панели мониторинга Power BI и создания мощных чат-ботов с помощью Power Virtual Agents.
+  Если вы студент, бизнес-пользователь или начинающий технический специалист, эта сертификация может ускорить ваш прогресс и дать толчок вашей карьере, если вы будете использовать свои навыки работы с Microsoft Power Platform для повышения продуктивности своей команды. Для прохождения обучения для этой сертификации вам не нужен никакой опыт, только базовые знания компьютерных технологий, аналитики данных, вычислений cloud и Интернета. Воспринимайте сертификацию по базовым знаниям как первый шаг в расширении набора своих навыков и возможность прохождения других сертификаций, например, Microsoft Power Platform Functional Consultant.
+
+  Сертификация Microsoft Power Platform Fundamentals может быть для вас отличной возможностью, если вы хотели бы&#58;
+  - Создавать решения с помощью Microsoft Power Platform.
+  - Автоматизировать базовые бизнес-процессы с помощью Power Automate.
+  - Осуществлять анализ данных с помощью Power BI. 
+  - Создавать простые приложения Power Apps.
+  - Создавать практичных чат-ботов с помощью Power Virtual Agents.
+
+  Для этой сертификации нет предварительных требований. Но если вы хотели бы получить больше опыта, вы могли бы&#58;
+  - понаблюдать за участником своей команды, который работает с Microsoft Power Platform;
+  - пройти обучение по доступным схемам в Microsoft Learn;
+  - зарегистрироваться на обучающий курс с инструктором.
 subTitle: Докажите, что вы понимаете основные возможности Power Platform - от коммерческой ценности и возможностей основного продукта до создания простого приложения Power Apps для холста, подключения источников данных, автоматизации основных бизнес-процессов с помощью Power Automate, создания панели мониторинга Power BI и создания мощных чат-ботов с помощью Power Virtual Agents.
 levels:
 - beginner
