--- a/learn-certs-pr/d365-finance-and-operations-apps-solution-architect-expert.yml
+++ b/learn-certs-pr/d365-finance-and-operations-apps-solution-architect-expert.yml
@@ -8,7 +8,20 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
 
-  Архитекторы решений для приложений Finance and Operations в Microsoft Dynamics 365 являются доверенными консультантами, которые разбираются в рекомендуемых бизнес-практиках и возможностях программного обеспечения. Они убеждают членов команды внедрять решения Dynamics, которые могут помочь достичь заранее определенных целей внедрения.
+  Вы архитектор решений, функциональный или технический консультант, IT-специалист или информационный работник, знакомый с приложениями Microsoft Dynamics 365 или Microsoft Power Platform? Обладаете глубоким пониманием приложений Dynamics 365 для финансов и операций? Являетесь доверенным советником, понимающим рекомендуемые деловые практики и возможности программного обеспечения? Если так, получение этого сертификата эксперта может открыть для вас двери, которые выведут вашу карьеру на новый уровень.
+
+  Для прохождения этой сертификации вы должны быть профессионалом, который работает с Dynamics 365, консультирует заинтересованных лиц и разрабатывает на основе бизнес-требований безопасные, масштабируемые и надежные решения. Вы разрабатываете целостные решения для своих клиентов, так как вы знаете, как работать с основными архитектурными компонентами приложений Dynamics 365 для финансов и операций. Вы обладаете обширными знаниями предметной области в одной или нескольких отраслях. К тому же вы понимаете, как решения в каждой области влияют на решение в целом. Кроме того, вы знакомы с платформами, инструментами и функциональными областями, такими как финансы, управление логистическими цепочками и производство.
+
+  Сертификация Dynamics 365&#58; Finance and Operations Apps Solution Architect Expert подходит вам, если&#58;
+  - вы обладаете значительным опытом работы в качестве консультанта по функциональным или техническим возможностям приложений Dynamics 365 для финансов и операций; 
+  - вы хотите стать архитектором решений или недавно начали им работать; 
+  - вы в своей организации несете ответственность за успешную разработку, внедрение и развертывание технологического решения, а также успешный переход на такое решение;
+  - у вас есть опыт консультирования организаций и участников команд реализации в целях уточнения бизнес-потребностей для разработки четко определенных и экономичных решений.
+
+  Если перед попыткой прохождения этой сертификации вам нужно получить больше опыта, вот несколько рекомендаций&#58;
+  - Понаблюдайте за работой архитектора решений или поработайте архитектором решений на нескольких проектах. 
+  - В качестве волонтера разработайте и внедрите решение для финансов и операций. 
+  - Посетите семинары для архитекторов решений вместе с другими архитекторами решений.
 subTitle: Архитекторы решений для приложений Finance and Operations в Microsoft Dynamics 365 являются доверенными консультантами, которые разбираются в рекомендуемых бизнес-практиках и возможностях программного обеспечения. Они убеждают членов команды внедрять решения Dynamics, которые могут помочь достичь заранее определенных целей внедрения.
 levels:
 - advanced
