--- a/learn-certs-pr/d365-functional-consultant-field-service.yml
+++ b/learn-certs-pr/d365-functional-consultant-field-service.yml
@@ -8,19 +8,18 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.s
 summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
-  <div><strong>MB-200 БУДЕТ ЗАМЕНЕН НА НОВЫЙ ЭКЗАМЕН, <a href="/learn/certifications/exams/pl-200">PL-200</a>, В СЕНТЯБРЕ 2020 ГОДА. Вы сможете получить этот сертификат, сдав экзамены MB-200 или PL-200, а также MB-240, до тех пор, пока экзамен MB-200 не будет отменен 31 декабря 2020 года. После отмены экзамена MB-200 для получения этого сертификата необходимо будет сдать экзамен PL-200 и MB-240.</strong><br/><br/></div></div>
+  <div><strong>ЭКЗАМЕН <a href="/learn/certifications/exams/mb-200">MB-200</a> ЗАМЕНЯЕТСЯ НОВЫМ ЭКЗАМЕНОМ, <a href="/learn/certifications/exams/pl-200">PL-200</a>. Вы сможете получить этот сертификат, сдав экзамен MB-200 или PL-200, а также экзамен MB-240, пока экзамен MB-200 не будет отменен 31 декабря 2020 года. После отмены экзамена MB-200 для получения этого сертификата нужно будет сдать экзамены PL-200 и MB-240. Примечание&#58; экзамены отменяются в 23:59 по центральному времени.</strong><br/><br/></div></div>
 
   Обладатели сертификата Microsoft Dynamics 365 для функциональных консультантов по обслуживанию на месте настраивают приложения обслуживания на местах, реализуют решения, управляющие жизненным циклом обслуживания на местах и развертывают решение Connected Field Service (IoT).
 subTitle: Обладатели сертификата Microsoft Dynamics 365 для функциональных консультантов по обслуживанию на месте настраивают приложения обслуживания на местах, реализуют решения, управляющие жизненным циклом обслуживания на местах и развертывают решение Connected Field Service (IoT).
 levels:
 - intermediate
 skills:
-- Осуществление обнаружения, планирования и анализа
-- Управление пользовательским интерфейсом
-- Управление объектами и данными
-- Реализация безопасности
-- Реализация интеграции
-- Выполнение развертывания и тестирования решений
+- Настраивать Common Data Service 
+- Создавать приложения с использованием Power Apps 
+- Создавать и управлять Power Automate 
+- Реализовывать чат-ботов Power Virtual Agents 
+- Интегрировать Power Apps с другими приложениями и службами
 - Настройка приложений обслуживания на местах
 - Управление заказами на выполнение работ
 - Планирование и диспетчеризации заказов на выполнение работ
@@ -34,21 +33,27 @@ products:
 - dynamics-365
 - dynamics-field-service
 courses:
-- uid: course.mb-200t00
+- uid: course.pl-200t00
 - uid: course.mb-240t00
 paths:
+- uid: learn-dynamics.get-started-using-common-data-service
+- uid: learn-dynamics.manage-permissions-and-administration-for-common-data-service
 - uid: learn-bizapps.create-powerapps
 - uid: learn-bizapps.create-app-models-business-processes
-- uid: learn-dynamics.implementing-customer-engagement-online
+- uid: learn-bizapps.create-business-process-flow
 - uid: learn-bizapps.automate-process-using-flow
+- uid: learn-bizapps.get-started-power-automate-buttons
+- uid: learn-bizapps.best-practices-environments
 - uid: learn-bizapps.create-use-analytics-reports-power-bi
-- uid: learn-bizapps.get-started-power-apps-portals
-- uid: learn-bizapps.extend-power-apps-portals
+- uid: learn-dynamics.create-relationships-business-rules-calculations-and-rollups-in-common-data-service
+- uid: learn-bizapps.work-power-virtual-agents
+- uid: learn-bizapps.bring-ai
+- uid: learn-bizapps.improve-business-performance-ai-builder
 - uid: learn-bizapps.implementing-dyn365-field-service
 - uid: learn-bizapps.universal-resource-scheduling
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUiZ
 exams:
-- uid: exam.mb-200
+- uid: exam.pl-200
 - uid: exam.mb-240
 resources:
 - title: Плакат с сертификацией
