--- a/learn-certs-pr/power-platform-functional-consultant-associate.yml
+++ b/learn-certs-pr/power-platform-functional-consultant-associate.yml
@@ -2,14 +2,23 @@
 title: 'Microsoft Certified: Power Platform Functional Consultant Associate'
 metadata:
   title: 'Microsoft Certified: Power Platform Functional Consultant Associate'
-  description: Power Platform Functional Consultant должен обладать глубокими практическими знаниями о Power Platform, включая практическое понимание возможностей и ограничений.
+  description: Как консультант по функциональным возможностям вы можете использовать эту сертификацию для более эффективного представления навыков, необходимых для осуществления проектов и участия в каких-либо мероприятиях. Сертификация Microsoft Power Platform Functional Consultant Associate позволяет организациям понять, что (без написания или с минимальным написанием кода) вы можете создавать решения, которые обычно требуют опыта разработчика.
 uid: certification.power-platform-functional-consultant-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></font></div>
 
-  Power Platform Functional Consultant должен обладать глубокими практическими знаниями о Power Platform, включая практическое понимание возможностей и ограничений. Они должны иметь практический опыт, используя инструменты производителя Power Platform для создания решений, использующих Power Platform и Microsoft 365. Сертифицированные функциональные консультанты должны обладать навыками моделирования данных, проектирования пользовательского интерфейса, анализа требований и анализа процессов.
-subTitle: Power Platform Functional Consultant должен обладать глубокими практическими знаниями о Power Platform, включая практическое понимание возможностей и ограничений.
+  Вы консультант по функциональным возможностям, аналитик данных или разработчик, желающий отточить свои навыки консультирования и настройки, или архитектор решений, проходящий сертификацию для архитекторов решений? Или, возможно, вы IT-специалист, обладающий знаниями в области настройки Microsoft Power Platform и соответствующим опытом? Если это так и вы знакомы с приложениями на основе модели Microsoft Dynamics 365 и принципами моделирования данных, узнайте, как сертификация Microsoft Power Platform Functional Consultant Associate может помочь вам улучшить свою карьеру и стать ключевым участником своей команды. Эта сертификация показывает миру, что вы обладаете достаточной квалификацией для построения и реализации решений с использованием Power Apps, Power BI и Power Virtual Agents.
+
+  Для прохождения этой сертификации вы должны быть специалистом, который работает с заинтересованными лицами и профильными специалистами организаций, такими как архитекторы решений, разработчики и тестировщики, с целью сбора требований и последующей реализации решений Microsoft Power Platform. Вы создаете приложения на основе модели, canvas и портала. Вы также создаете потоки Power Automate, разрабатываете чат-ботов с использованием Power Virtual Agents и анализируете данные с использованием визуализации и информационных панелей Power BI. Вы даже можете улучшать приложения, создавать собственные способы взаимодействия с пользователями, осуществлять интеграцию систем, преобразование данных, автоматизацию пользовательских процессов и пользовательские визуализации.
+
+  Как консультант по функциональным возможностям вы можете использовать эту сертификацию для более эффективного представления навыков, необходимых для осуществления проектов и участия в каких-либо мероприятиях. Сертификация Microsoft Power Platform Functional Consultant Associate позволяет организациям понять, что (без написания или с минимальным написанием кода) вы можете создавать решения, которые обычно требуют опыта разработчика.
+
+  Если перед попыткой прохождения этой сертификации вам нужно получить больше опыта, вот несколько рекомендаций&#58;
+  - Создайте простую информационную панель с использованием Power BI.
+  - Пройдите обучение по доступным схемам в Microsoft Learn.
+  - Зарегистрируйтесь на обучающий курс с инструктором.
+subTitle: Как консультант по функциональным возможностям вы можете использовать эту сертификацию для более эффективного представления навыков, необходимых для осуществления проектов и участия в каких-либо мероприятиях. Сертификация Microsoft Power Platform Functional Consultant Associate позволяет организациям понять, что (без написания или с минимальным написанием кода) вы можете создавать решения, которые обычно требуют опыта разработчика.
 levels:
 - intermediate
 skills:
@@ -32,6 +41,8 @@ products:
 - power-platform
 - office-teams
 - power-virtual-agents
+courses:
+- uid: course.pl-200t00
 paths:
 - uid: learn-dynamics.get-started-using-common-data-service
 - uid: learn-dynamics.manage-permissions-and-administration-for-common-data-service
